// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> should render 1`] = `
<button
  className="btn btn-primary"
  onClick={[MockFunction]}
>
  Click Me
</button>
`;

exports[`<Button /> should render with an icon 1`] = `
<button
  className="btn btn-primary btn-icon-left"
  onClick={[MockFunction]}
>
  Click Me
  <Icon
    name="create"
    size={24}
  />
</button>
`;
